@@ -1,9 +1,9 @@
 /*
  * Quadromania
- * (c) 2002/2003/2009 by Matthias Arndt <marndt@asmsoftware.de> / ASM Software
+ * (c) 2002/2003/2009/2010 by Matthias Arndt <marndt@asmsoftware.de> / ASM Software
  *
- * File: main.h - declarations for the main module
- * last Modified: 19.01.2010 : 18:32
+ * File: sysconfig.h - target system specific settings at compile time
+ * last Modified: 19.01.2010 : 18:30
  *
  * This program is free software; you can redistribute it and/or modify
  * it under the terms of the GNU General Public License as published by
@@ -23,25 +23,21 @@
  *
  */
 
-#ifndef __MAIN_H
-	#define __MAIN_H
+#ifndef __SYSCONFIG_H
+#define __SYSCONFIG_H
 
-    #include "version.h"
-	#include "sysconfig.h"
+	/* global settings for switches */
+	#define _LOW 10
+	#define _HIGH 20
 
-	/**************************
-	 * DATA TYPE DECLARATIONS *
-	 **************************/
-	enum GAMESTATE
-	{
-		UNINITIALIZED, NONE, TITLE, INSTRUCTIONS, SETUPCHANGED, GAME, WON, GAMEOVER, QUIT
-	};
+	#if(defined __GP2X_WIZ)
+		/* GP2x Wiz target using SDL */
+		#define SCREENRES 					_LOW
+		#define HAVE_WINDOWED_MODE          0
+	#else
+		/* default SDL target for use with windowing GUI, e.q. X11/Windows/Mac OS */
+		#define SCREENRES 					_HIGH
+		#define HAVE_WINDOWED_MODE          1
+	#endif
 
-	/**************
-	 * PROTOTYPES *
-	 **************/
-
-	BOOLEAN InitGameEngine(BOOLEAN activate_fullscreen);
-	void MainHandler(void);
-
-#endif
+#endif /* __SYSCONFIG_H */
